<resources>
    <string name="app_name">KotlinTip</string>
    <string name="btn_layout">布局</string>
    <string name="btn_control">控件</string>
    <string name="LinearLayout">线性布局</string>
    <string name="FrameLayout">帧布局</string>
    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="five">FIVE</string>
    <string name="center">CENTER</string>
    <string name="defaults">DEFAULT</string>
    <string name="top_center">TOP_CENTER</string>
    <string name="top_end">TOP_END</string>
    <string name="start_center">START_CENTER</string>
    <string name="end_center">END_CENTER</string>
    <string name="bottom_start">BOTTOM_START</string>
    <string name="bottom_center">BOTTOM_CENTER</string>
    <string name="bottom_end">BOTTOM_END</string>
    <string name="RelativeLayout">相对布局</string>
    <string name="top">TOP</string>
    <string name="bottom">BOTTOM</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="TableLayout">表格布局</string>
    <string name="text">TEXT</string>
    <string name="AbsoluteLayout">绝对布局</string>
    <string name="ConstraintLayout">约束布局</string>
    <string name="TextView">TextView</string>
    <string name="Button">Button</string>
    <string name="CheckBox_ON">CheckBox ON</string>
    <string name="CheckBox_OFF">CheckBox OFF</string>
    <string name="ToggleButton_off">ToggleButton OFF</string>
    <string name="ToggleButton_on">ToggleButton ON</string>
    <string name="chip_action">Chip Action</string>
    <string name="chip_choice">Chip Choice</string>
    <string name="chip_filter">Chip Filter</string>
    <string name="radioGroup">RadioGroup</string>
    <string name="chipGroup">ChipGroup</string>
    <string name="layout">布局</string>
    <string name="kotlinTip">KotlinTip</string>
    <string name="widgets">Widgets</string>
    <string name="toBottom">跳转到底部</string>
    <string name="toSpinner">跳转到Spinner</string>
    <string name="toRecyclerView">跳转到RecyclerView</string>
    <string name="toRight">跳转到最右</string>
    <string name="toStart">跳转到开始</string>
    <string name="toCenter">跳转到中间</string>
    <string name="items0">Item0</string>
    <string name="items1">Item1</string>
    <string name="items2">Item2</string>
    <string name="items3">Item3</string>
    <string name="items4">Item4</string>
    <string name="items5">Item5</string>
    <string name="items6">Item6</string>
    <string name="items7">Item7</string>
    <string name="items8">Item8</string>
    <string name="items9">Item9</string>
    <string name="viewPager">ViewPager</string>
    <string name="appBarLayout">AppBarLayout</string>
    <string name="bottomAppBar">BottomAppBar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KotlinTip</string>
    <string name="nav_header_subtitle">zlgorithmy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
</resources>
