<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sel"
    android:orientation="vertical"
    tools:context=".activities.layout.FrameLayoutActivity">

    <TextView
        style="@style/TextView"
        android:text="@string/FrameLayout"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/memariani"
        android:elevation="20dp"
        android:orientation="vertical"
        android:scrollbars="none">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1000dp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:background="#FF6143"
                android:elevation="10dp"
                android:gravity="top|center"
                android:text="@string/one"
                android:textSize="25sp" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="#7BFE00"
                android:elevation="10dp"
                android:gravity="top|center"
                android:text="@string/two"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="#00FFFF"
                android:elevation="10dp"
                android:gravity="top|center"
                android:text="@string/three"
                android:textSize="25sp" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="#0097A7"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#FF0000"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/defaults"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center"
                android:background="#00FF00"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/top_center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="top|end"
                android:background="#0000FF"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/top_end"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start|center"
                android:background="#FFFF00"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/start_center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="end|center"
                android:background="#FF00FF"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/end_center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|start"
                android:background="#9FA8DA"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/bottom_start"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|center"
                android:background="#7F7F7F"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/bottom_center"
                android:textSize="25sp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|end"
                android:background="#0097A7"
                android:elevation="10dp"
                android:gravity="center"
                android:text="@string/bottom_end"
                android:textSize="25sp" />
        </FrameLayout>
    </ScrollView>
</LinearLayout>