<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0288D1"
    tools:context=".layout.RelativeLayoutActivity">

    <Button
        android:background="#EC407A"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/center" />

    <Button
        android:background="#42A5F5"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_alignEnd="@id/button"
        android:text="@string/top" />

    <Button
        android:background="#FFA726"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignEnd="@id/button"
        android:text="@string/bottom" />

    <Button
        android:background="#26C6DA"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button"
        android:layout_toStartOf="@id/button"
        android:text="@string/left"
        tools:ignore="RelativeOverlap" />

    <Button
        android:background="#FF7043"
        style="@style/TextAppearance.AppCompat.Headline"
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/button"
        android:layout_toEndOf="@id/button"
        android:text="@string/right" />
</RelativeLayout>