<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LayoutActivity">

    <Button
        android:id="@+id/Btn_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0097A7"
        android:gravity="center"
        android:text="@string/LinearLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Btn_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#E64A19"
        android:gravity="center"
        android:text="@string/FrameLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Btn_LinearLayout" />

    <Button
        android:id="@+id/Btn_RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#0288D1"
        android:gravity="center"
        android:text="@string/RelativeLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Btn_FrameLayout" />

    <Button
        android:id="@+id/Btn_TableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFA726"
        android:gravity="center"
        android:text="@string/TableLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Btn_RelativeLayout" />

    <Button
        android:id="@+id/Btn_AbsoluteLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#5C6BC0"
        android:gravity="center"
        android:text="@string/AbsoluteLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Btn_TableLayout" />

    <Button
        android:id="@+id/Btn_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#80EC407A"
        android:gravity="center"
        android:text="@string/ConstraintLayout"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Btn_AbsoluteLayout" />
</LinearLayout>