<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:elevation="5dp"
    android:orientation="vertical"
    tools:context=".activities.containers.AppBarActivity">

    <TextView
        style="@style/TextView"
        android:text="@string/layout"
        tools:ignore="RtlSymmetry" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        style="@style/baseView"
        android:background="@drawable/ali"
        android:elevation="10dp"
        tools:ignore="ExtraText">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/mAppbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/mToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/mTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways"
                app:tabMode="scrollable">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items0" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items1" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items2" />
            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/candy"
                    android:fontFamily="@font/source_han_serif_cn_bold"
                    android:text="@string/items0"
                    android:textSize="30sp"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    style="@style/TextView"
                    android:background="@drawable/opa"
                    android:text="@string/items1" />

                <TextView
                    style="@style/TextView"
                    android:background="@drawable/sel"
                    android:text="@string/items2" />

                <TextView
                    style="@style/TextView"
                    android:background="@drawable/love_couple"
                    android:text="@string/items3" />

                <TextView
                    style="@style/TextView"
                    android:background="@drawable/memariani"
                    android:text="@string/items4" />

                <TextView
                    style="@style/TextView"
                    android:background="@drawable/lemon_twist"
                    android:text="@string/items5" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/kotlin192" />"
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>