<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sel"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        style="@style/TextView"
        android:text="@string/kotlinTip"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/memariani"
        android:elevation="20dp"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Btn_layout"
                style="@style/Button"
                android:background="@drawable/wedding_day_blues"
                android:text="@string/btn_layout" />

            <Button
                android:id="@+id/Btn_control"
                style="@style/Button"
                android:background="@drawable/emerald_water"
                android:text="@string/btn_control" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>