<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ali"
    android:elevation="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_marginTop="20dp"
        android:background="@mipmap/ic_launcher_foreground"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:elevation="10dp" />

    <TextView
        android:layout_marginTop="-30dp"
        android:elevation="5dp"
        android:fontFamily="@font/source_han_serif_cn_bold"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="-10dp"
        android:elevation="5dp"
        android:fontFamily="@font/source_han_serif_cn_regular"
        android:gravity="center"
        android:id="@+id/textView"
        android:text="@string/nav_header_subtitle"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        tools:ignore="RtlSymmetry" />

</LinearLayout>
